[package]
name = "waveform"
version = "0.1.0"
edition = "2021"

[lib]
name = "waveform"
crate-type = ["cdylib"]

[dependencies]
ffmpeg-next = "*"
tempfile = "*"
base64 = "*"

[dependencies.pyo3]
version = "*"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["extension-module", "abi3-py38"]
