[package]
name = "waveform"
version = "0.1.0"
edition = "2021"

[lib]
name = "waveform"
crate-type = ["cdylib"]

[dependencies]
tempfile = "*"
base64 = "*"
symphonia = { version = "0.5.4", features = ["mp3", "flac", "vorbis"] }
vorbis_rs = "0.5.5"
bytemuck = "1.23.1"

[dependencies.pyo3]
version = "*"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["extension-module", "abi3-py38"]
